# AI-TextTool

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CODE_OPTIMIZATION_REPORT.md  CODE_REVIEW_REPORT.md  FUTURE_IMPROVEMENTS.md  MIGRATION_PLAN.md  README.md  SIMPLIFY_DATA_STORAGE.md  chat.html  codeQualityReview.md  deadCodeReview.md  eslint.config.js  history.html  index.html  onboarding.html  operation-edit.html  package-lock.json  package.json  popup.html  settings.html  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
ccusage/: package.json
docs/: CODE_OPTIMIZATION_2026-02-12.md  CODE_REVIEW_REPORT.md  INDEX.md  TAURI_REFERENCE.md  code_review_Qwen3.6.md  code_review_consolidated.md  code_review_deepseek-v4-flash.md  code_review_findings.md
src/: App.vue  chat.ts  history.ts  main.ts  onboarding.ts  operation-edit.ts  popup.ts  settings.ts  vite-env.d.ts  window-bootstrap.ts
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_provider.rs  config.rs  data_manager.rs  lib.rs  main.rs  shortcut_manager.rs  tray_manager.rs  window_manager.rs
src-tauri/src/ai_provider/: gemini.rs  mod.rs  types.rs
src-tauri/src/commands/: ai_commands.rs  mod.rs  utility_commands.rs  window_commands.rs
src-tauri/src/data_manager/: commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/utils/: file_paths.rs  logging.rs  mod.rs  time.rs  validation.rs
windows/: chat.html  history.html  onboarding.html  popup.html  (+2 more)
(+29 files in other folders)
