[package]
name = "ai-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = [
    "rt",         # Runtime for async/await
    "macros",     # Tokio macros
    "time",       # sleep, intervals
    "sync",       # Mutex, channels
    "fs",         # File I/O (used in data_manager)
    "io-util",    # AsyncRead/Write utilities (AsyncWriteExt)
] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
